--- a/frontend/src/components/NewTodo.css
+++ b/frontend/src/components/NewTodo.css
@@ -72,7 +72,7 @@
   border: 1px solid #ccc;
   color: #5c5c5c;
   border-radius: 10px;
-  /* outline: none; */
+  width: 50%;
   font-size: 16px;
   transition: border-color 0.2s;
 }
@@ -117,7 +117,7 @@ select:focus {
 }
 
 .cont-add button {
-  padding: 0.6rem 1.2rem;
+  padding: 0.8rem 1.2rem;
   border: none;
   background-color: #007bff;
   color: white;
@@ -272,12 +272,20 @@ Link:hover {
 }
 .top-bar {
   width: fit-content;
-  /* max-width: 1000px; */
   display: flex;
   justify-content: flex-end;
   padding: 16px 32px;
   position: relative;
   margin-right: -400px;
+  margin-bottom: -30px;
+}
+.top-bar-H{
+  width: fit-content;
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px 32px;
+  position: relative;
+  margin-right: -450px;
   margin-bottom: -30px;
 }
 
@@ -289,13 +297,11 @@ Link:hover {
   padding: 8px 16px;
   border-radius: 8px;
   font-weight: 500;
-  /* transition: background 0.3s ease; */
 }
 
 .login-link:hover {
   background-color: #0056b3;
 }
-
 
 /* New CSS For search and pagination */
 
@@ -327,6 +333,20 @@ Link:hover {
   color: white;
 }
 
+.user-icon {
+  background-color: #555;
+  color: white;
+  font-weight: bold;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  position: absolute;
+  top: 15px;
+  right: -20px;
+  cursor: pointer;
+}
 
 @keyframes fadeIn {
   from {
@@ -342,7 +362,130 @@ Link:hover {
 .main2 .container {
   animation: fadeIn 0.3s ease-in-out;
 }
-@media (max-width: 500px) {
+
+
+@media (max-width: 600px) {
+  body {
+    max-height: 100vh;
+    width: 100%;
+    overflow: auto;
+  }
+  .main {
+    height: 100vh;
+    padding: 10px;
+    max-width: 100%;
+  }
+  .container {
+    padding: 1.5rem;
+    width: 100%;
+  }
+  .cont-inp {
+    max-width: 400px;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .edit-inp {
+    max-width: 400px;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .cont-add {
+    max-width: 400px;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .cont-adde {
+    max-width: 400px;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .cont-inp input[type="text"] {
+    padding: 0.45rem 0.8rem;
+    font-size: 12px;
+    width: 50%;
+  }
+  .cont-add button {
+    padding: 0.4rem 1.2rem;
+  }
+  .cont-inp textarea {
+    padding: 0.45rem 0.8rem;
+    font-size: 12px;
+    width: 50%;
+  }
+  .edit-inp input[type="text"] {
+    padding: 0.45rem 0.8rem;
+    font-size: 12px;
+    width: 50%;
+  }
+
+  .cont-add select {
+    padding: 0.45rem 0.8rem;
+    font-size: 12px;
+    width: 50%;
+  }
+  .cont-adde select {
+    padding: 0.45rem 0.8rem;
+    font-size: 12px;
+    width: 50%;
+    height: 32px;
+  }
+  .btn-edit {
+    gap: 8px;
+  }
+  .btn-edit button {
+    padding: 4px 8px;
+    font-weight: 300;
+  }
+  .top-bar {
+    padding: 8px 16px;
+    margin-right: -200px;
+    margin-bottom: -20px;
+  }
+  .top-bar-H {
+    padding: 8px 16px;
+    margin-right: -270px;
+    margin-bottom: -20px;
+  }
+  .todos {
+    gap: 8px;
+  }
+  .text {
+    font-weight: 400;
+    font-size: 1rem;
+  }
+  .status {
+    font-size: 1rem;
+  }
+  .desc {
+    margin-top: 0.1rem;
+    font-size: 1rem;
+  }
+  .btn button {
+    padding: 0.3rem 0.5rem;
+    font-size: 1rem;
+  }
+  .user-icon {
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    top: 10px;
+    right: -10px;
+  }
+  .user-icon img {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: -5px;
+    right: -13px;
+  }
+  .login-link {
+    margin-right: 10px;
+    padding: 8px 16px;
+    font-weight: 500;
+  }
+}
+
+@media (max-width: 400px) {
   body {
     max-height: 100vh;
     width: 100%;
@@ -362,8 +505,13 @@ Link:hover {
     gap: 0.5rem;
     margin-bottom: 1rem;
   }
-  .cont-add {
+  .edit-inp {
     max-width: 330px;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .cont-add {
+    max-width: 320px;
     gap: 0.5rem;
     margin-bottom: 1rem;
   }
@@ -375,26 +523,32 @@ Link:hover {
   .cont-inp input[type="text"] {
     padding: 0.45rem 0.8rem;
     font-size: 12px;
-    width: 150px;
+    width: 50%;
+  }
+  .cont-add button {
+    padding: 0.4rem 1.2rem;
   }
   .cont-inp textarea {
     padding: 0.45rem 0.8rem;
     font-size: 12px;
-    width: 150px;
+    width: 45%;
   }
+  .edit-inp input[type="text"] {
+    padding: 0.45rem 0.8rem;
+    font-size: 12px;
+    width: 50%;
+  }
+
   .cont-add select {
     padding: 0.45rem 0.8rem;
     font-size: 12px;
-    width: 150px;
+    width: 50%;
   }
   .cont-adde select {
     padding: 0.45rem 0.8rem;
     font-size: 12px;
-    width: 150px;
+    width: 50%;
     height: 32px;
-  }
-  .top-bar {
-    margin-right: -250px;
   }
   .btn-edit {
     gap: 8px;
@@ -402,5 +556,52 @@ Link:hover {
   .btn-edit button {
     padding: 4px 8px;
     font-weight: 300;
+  }
+  .top-bar {
+    padding: 8px 16px;
+    margin-right: -130px;
+    margin-bottom: -15px;
+  }
+  .top-bar-H {
+    padding: 4px 8px;
+    margin-right: -190px;
+    margin-bottom: -15px;
+  }
+  .todos {
+    gap: 8px;
+  }
+  .text {
+    font-weight: 400;
+    font-size: 0.9rem;
+  }
+  .status {
+    font-size: 0.9rem;
+  }
+  .desc {
+    margin-top: 0.1rem;
+    font-size: 0.9rem;
+  }
+  .btn button {
+    padding: 0.2rem 0.4rem;
+    font-size: 0.8rem;
+  }
+  .user-icon {
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    top: 10px;
+    right: -10px;
+  }
+  .user-icon img {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: -5px;
+    right: -13px;
+  }
+  .login-link {
+    margin-right: 10px;
+    padding: 8px 16px;
+    font-weight: 400;
   }
 }
