--- a/frontend/src/components/NewTodo.css
+++ b/frontend/src/components/NewTodo.css
@@ -309,6 +309,7 @@ Link:hover {
   justify-content: center;
   gap: 8px;
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .pagination button {
@@ -472,6 +473,9 @@ Link:hover {
     padding: 8px 16px;
     font-weight: 500;
   }
+  .pagination{
+    margin-bottom: 1rem;
+  }
 }
 
 @media (max-width: 400px) {
@@ -592,5 +596,8 @@ Link:hover {
     margin-right: 10px;
     padding: 8px 16px;
     font-weight: 400;
+  }
+  .pagination{
+    margin-bottom: 1rem;
   }
 }
