Used react-hook-form

--- a/frontend/src/LoginSignup/Loginpage.css
+++ b/frontend/src/LoginSignup/Loginpage.css
@@ -54,6 +54,11 @@
   cursor: pointer;
 }
 
+.error{
+  color: red;
+  font-size: 12px;
+}
+
 
 @media(max-width:600px){
     .loginsignup-container{
